Add issue adding functionality

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <label for="assigned-to">Assigned To</label>
         <input type="text" id="assigned-to" class="form-control" placeholder="Enter Responsible...">
       </div>
-      <button class="btn btn-primary margin-10 btn-lg">Add</button>
+      <button class="btn btn-primary margin-10 btn-lg" id="add">Add</button>
     </div>
     <script src="js/script.js"></script>
   </body>
