--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       </div>
       <button class="btn btn-primary margin-10 btn-lg" id="add">Add</button>
     </div>
+    <div id="show-issues"></div>
     <script src="js/script.js"></script>
   </body>
 </html>
