--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
     <div id="show-issues"></div>
     <div id="keyboard-wrapper">
       <div id="keyboard-keys"></div>
-      <button class="btn btn-primary btn-sm" onclick="deleteKey()">←</button>
-      <button class="btn btn-primary btn-sm" onclick="hideKeyboard()">
+      <button class="btn btn-primary margin-5" onclick="keyPress(' ')">
+        Space
+      </button>
+      <button class="btn btn-primary margin-5" onclick="deleteKey()">
+        ← Delete
+      </button>
+      <button class="btn btn-primary margin-5" onclick="hideKeyboard()">
         Close Keyboard
       </button>
     </div>
